--- a/BotApi/appsettings.json
+++ b/BotApi/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "DataBaseService": {
+    "Address": "address.com"
+  },
   "AllowedHosts": "*",
   "Kestrel": {
     "EndpointDefaults": {
