--- a/BotApi/appsettings.Development.json
+++ b/BotApi/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "DataBaseService": {
+    "Address": "http://localhost:5003"
   }
 }
